--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,16 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   flutter_screenutil: ^5.9.0
+  persistent_bottom_nav_bar_v2: ^4.2.8
+  firebase_core: ^2.24.2
+  cloud_firestore: ^4.14.0
+  firebase_storage: ^11.6.0
+  firebase_messaging: ^14.7.10
+  firebase_auth: ^4.16.0
+  dio: ^5.4.0
+  flutter_bloc: ^8.1.3
+  pretty_dio_logger: ^1.3.1
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
