--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,11 +24,13 @@ dependencies:
   flutter_bloc: ^8.1.3
   pretty_dio_logger: ^1.3.1
   shared_preferences: ^2.2.2
+  provider: ^6.1.1
+  get_it: ^7.6.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  change_app_package_name: ^1.1.0
   flutter_lints: ^2.0.0
 
 flutter:
