--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   shared_preferences: ^2.2.2
   provider: ^6.1.1
   get_it: ^7.6.6
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
@@ -36,6 +37,8 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-     - assets/
+    - assets/
+    - lib/views/widgets/
+    - lib/generated/
 
 
